--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
 
 	
-  <p>Hello, I am Khürt Williams, the sole employee and Principal Consultant of Monkey Hill, LLC, an information security consultancy.  I started consulting work in the information security field in 2013. I have over 30 years of information technology experience and 17 years in information security.</p>
+  <p>I am Khürt Williams, the sole employee and Principal Consultant of Monkey Hill, LLC, an information security consultancy.  I started consulting work in the information security field in 2013. I have over 30 years of information technology experience and 19 years in information security.</p>
 <p>I specialise in security architecture and security designs for information systems that address business requirements, mitigate potential risks, and strategically apply security controls. I have also worked in multimedia <a href="http://www.sri.com/engage/products-services-license">R&amp;D</a> and developed web applications.</p>
 <p>I am also a <a href="https://www.credly.com/badges/76f2a121-814e-4563-83cd-4c95d6588fb5">Certified Information Systems Security Professional</a>, <a href="https://www.credly.com/badges/5d6c6336-fc29-45f1-a26a-2f8614227691">Certified Cloud Security Professional</a> and ITILv3 certified professional.</p>
 <p>I am available for <a href="https://clarity.fm/khurtwilliams">quick consultations</a> and <a href="https://www.linkedin.com/in/khurt">long term</a> engagements.</p>
